# jimgui

./: .gitignore  README.md  build.gradle  jitpack.yml  settings.gradle
.github/workflows/: publish.yml  release.yml
imgui-headers/: cimgui.h  cimgui_all.h  cimgui_impl.h
jimgui-binding/: build.gradle
jimgui-core/: build.gradle
jimgui-native/: build.gradle
native-build/: CMakeLists.txt  cimgui.def  jimgui_opengl3.cpp
net/bplo/libs/jimgui-binding/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
net/bplo/libs/jimgui-binding/0.1.0-SNAPSHOT/: jimgui-binding-0.1.0-20260314.224730-1-sources.jar.md5  jimgui-binding-0.1.0-20260314.224730-1-sources.jar.sha1  jimgui-binding-0.1.0-20260314.224730-1-sources.jar.sha256  jimgui-binding-0.1.0-20260314.224730-1-sources.jar.sha512  jimgui-binding-0.1.0-20260314.224730-1.jar.md5  jimgui-binding-0.1.0-20260314.224730-1.jar.sha256  jimgui-binding-0.1.0-20260314.224730-1.module  jimgui-binding-0.1.0-20260314.225155-1.pom  (+15 more)
net/bplo/libs/jimgui-core/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
net/bplo/libs/jimgui-native/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
test/: test_bool_h$shared.java  test_bool_h.java
tools/native-build-win64/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cimgui.sln  cimgui.vcxproj  cimgui.vcxproj.filters  cmake_install.cmake
tools/native-build-win64/Release/: cimgui.exp  cimgui.lib
tools/native-build-win64/cimgui.dir/Release/: cimgui.dll.recipe
tools/native-build-windows-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cimgui.sln  cimgui.vcxproj  cimgui.vcxproj.filters  cmake_install.cmake
tools/native-build-windows-x64/Release/: cimgui.exp
tools/native-build-windows-x64/cimgui.dir/Release/: cimgui.dll.recipe
(+328 files in other folders)
